tests/NormalTests/paczka1/fuzzy1/95477907.err
Error in line 6: Eophy4sE A973 76,2
Error in line 13: RpBt5 A973 -1,6
Error in line 7: Eophy4sE S518 42,2
Error in line 21: 0QpRKrH3aXU S589 574,8
Error in line 31: 6DfbyGtNbF S940 452,1
Error in line 34: 0QpRKrH3aXU S940 29,6
